--- a/styles.css
+++ b/styles.css
@@ -1,65 +1,244 @@
-.container {
-    color:green;
-}
-
 .jumbotron {
     background-image: url(https://www.holyfamilyindooroopilly.net.au/wp-content/uploads/2016/05/KO-background-header.jpg);
     background-size: cover;
+    margin-bottom: 0px;
 }
 
-#navbar {
-    font-size: 20px;
-    outline: 2px solid black;
-} 
-
+.jumbotron h1 {
+    color: darkslateblue;
+    font-style: bold;
+    font-size: 60px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
 img {
     width: 300px; /* You can set the dimensions to whatever you want */
     height: 300px;
     object-fit: cover;
 }
 
+
+#footer {
+    padding-bottom: 20px;
+    margin-bottom:20px;
+}
+
+#footer .row {
+    background-color: lightgray;
+    font-size: 14px;
+    color:black;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+}
+
 /* Index.html */
-#index .row {
-    outline: 2px solid black;
-    padding: 10px;
+#index {
+    background-color: lightgray;
+}
+#index .container{
+    background-color: white;
+    padding: 0px;
 }
 
-#news_table h5 {
+#list .row {
+    border-bottom: 2px solid rgb(0, 81, 255);
+    padding: 10px;   
+}
+
+#h_container{
+    height: 300px;
+    width: 300px;
+    position: relative;
+    margin-bottom:2px;
+}
+
+#h_container img{
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    border-radius: 5%;
+}
+
+
+#h_container h5{
+    z-index: 100;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size:14px;
+    position: absolute;
+    bottom:2px;
+    padding: 4px;
+    margin:10px;
+    letter-spacing: normal;
+    background: rgba(0, 0, 0, 0.7);
+    color: white;
+}
+
+#h_container h:hover{
+    text-decoration: underline;
+}
+
+#navbar {
+    font-size: 20px;
+    padding-top: 0px;
+    padding-right: 0px;
+    padding-bottom: 0px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    margin-bottom: 0px;
+    margin-top: 0px;
+    letter-spacing: 0;
+} 
+
+#navbar li{
+    margin-right:0;
+}
+
+#navbar a {
+    padding-bottom: 7px;
+    padding-top: 7px;
+    padding-right:20px;
+    padding-left:20px;
+    display: block;
+    color: darkslateblue;
+}
+
+#navbar a:hover{
+    background-color: grey;
+    opacity: .7;
+    text-decoration: none;
+}
+
+#news_table_header {
+    margin-right: 25px;
+    margin-left: 25px;
+    margin-top: 15px;
+    padding-bottom: 15px;
+    border-bottom: 2px solid rgb(0, 81, 255);
+}
+
+#news_table img {
+    vertical-align:bottom;
+    border: 0;
+}
+
+#news_table #list {
+    margin-right: 40px;
+    margin-left: 40px;
+    padding:2px;
+}
+
+#news_table #list h5{
+    color: darkslateblue;
     font-size: 16px;
+    font-weight: bold; 
+    letter-spacing: normal;
+    margin-left: 10px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
+#news_table #list img {
+        width: 75px; /* You can set the dimensions to whatever you want */
+        height: 75px;
+        object-fit: cover;
+}
 
 /* Search.html */
 #weather_header {
-    outline: 2px solid black;
-    background-color: lightgray;
-    padding: 10px;
+    border-top: 2px solid rgb(0, 81, 255); 
+    border-bottom: 2px solid rgb(0, 81, 255);   
+    padding-left: 10px;
+    padding-bottom: 10px;
+    color:black;
+    margin-right: 20px;
+    margin-left: 20px;
 }
 
-#weather_body {
-    outline: 2px solid black;
-    background-color: beige;
-} 
+#search_form {
+    display:block;
+    text-align:center;
+    margin-top:10px;
+    margin-bottom: 10px;
+    margin-right:25px;
+    margin-left:25px;
+}
+#get_weather {
+    background-color: lightgrey;
+}
 
-#weather_table {
-    outline: 2px solid black;
+#city_name{
+    padding-top: 10px;
+    padding-bottom: 10px;
+    color: darkslateblue;
 }
 
 #table_header {
     font-weight: bold;
-    color:black;
-    background-color: antiquewhite;
+    color:darkslateblue;
+}
+
+#weather_info {
+    color: darkslateblue;
+}
+
+#weather_info .row {
+    border-left: 2px solid rgb(0, 81, 255);
+    border-right: 2px solid rgb(0, 81, 255);
+    margin-right:10px;
+    padding-left: 4px; 
+    padding-right:2px;
+}
+
+#r1 {
+    border-top:2px solid rgb(0, 81, 255);
+}
+#r3{
+    border-bottom:2px solid rgb(0, 81, 255);
+}
+
+#city_temp {
+    font-size: 30px;
+    color: darkslateblue;
+}
+
+#weather_table {
+    margin-right: 20px; 
+    margin-left: 20px;
+}
+#weather_desc {
+    font-size: 30px;
+    color: darkslateblue;
 }
 
 #body {
     font-weight: bold;
-    color: black;
+    color: darkslateblue;
+}
+#body thead{
+    color: darkslateblue;
+}
+#body td{
+    color: darkslateblue;
 }
 
+#body tr:hover{
+    background-color: grey;
+    opacity: .7;
+    text-decoration: none;
+}
 #windy {
     width: 100%;
-    height: 200px;
+    height: 400px;
+    outline: 4px solid rgb(0, 81, 255);
 }
+
+#windy #logo-wrapper {
+    top: initial;
+    bottom: 40px;
+    scale: 50%;
+}
+
+#windy_row{
+    margin-right:6px;
+}
+
 
 .hiddenRow {
     padding: 0 !important;
@@ -68,8 +247,8 @@ img {
 /* About.html */
 #about_paragraph {
     margin-top: 20px;
-    outline: 2px solid black;
-    background-color: lightgray;
+    border-top: 2px solid rgb(0, 81, 255);
+    background-color: white;
     padding-top: 20px;
     padding-bottom: 20px;
     padding-right: 200px;
@@ -82,3 +261,103 @@ img {
     margin-top: 20px;
     height: 100%;
 }
+
+
+@media (max-width: 992px) {
+    #footer .row{
+        font-size: 10px;
+    }
+    img {
+        width: 200px; /* You can set the dimensions to whatever you want */
+        height: 200px;
+    }
+    #h_container{
+        height: 200px;
+        width: 200px;
+    }
+
+    #navbar {
+        font-size: 20px;
+    } 
+    #city_temp{
+        font-size:28px;
+    }
+    #weather_desc{
+        font-size:20px;
+    }
+}
+
+@media (max-width: 768px) {
+    img {
+        width: 150px; /* You can set the dimensions to whatever you want */
+        height: 150px;
+    }
+
+    .jumbotron h1 {
+        font-size: 40px;
+    }
+
+    #h_container{
+        height: 150px;
+        width: 150px;
+    }
+    #navbar {
+        font-size: 13px;
+    } 
+    
+    #h_container h5{
+        font-size:8px;
+    }
+
+    #news_table #list h5{
+        font-size: 14px;
+    }
+    #navbar a{
+        padding-right:15px;
+        padding-left:15px;
+    }
+    #city_temp{
+        font-size:20px;
+    }
+    #r3{
+        font-size:14px;
+    }
+    #about_paragraph{
+        font-size: 13px;
+        padding-right:100px;
+        padding-left:100px;
+    }
+}
+
+@media (max-width: 600px) {
+    #navbar{
+    font-size: 14px;
+    }
+    
+    #navbar a{
+        padding-right:9px;
+        padding-left:9px;
+    }
+    #weather_info{
+        margin-bottom: 20px;
+        padding-right:0;
+        margin-right:0;
+    }
+    #city_name{
+        font-size: 30px;
+    }
+}
+
+@media (max-width: 480px) {
+    #navbar{
+    font-size: 12px;
+    }
+    #news_table #list h5{
+        font-size: 12px;
+    }
+    #city_name{
+        font-size: 25px;
+    }
+}
+
+  
